--- a/_config.yml
+++ b/_config.yml
@@ -49,8 +49,9 @@ google_site_verification: # fill in to your verification string
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
 
+# Google Analytics
 google_analytics:
-  id: # fill in your Google Analytics ID
+  id: G-T2JGST8W6S # fill in your Google Analytics ID
 
 # Prefer color scheme setting.
 #
