--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ google_site_verification: # fill in to your verification string
 
 # Google Analytics
 google_analytics:
-  id: # fill in your Google Analytics ID
+  id: G-T2JGST8W6S # fill in your Google Analytics ID
 
 # Prefer color scheme setting.
 #
